Minor fixes for custom theme: better contrast

--- a/customizations/styles/titles.css
+++ b/customizations/styles/titles.css
@@ -1,4 +1,4 @@
-html { background-color: #eee58a; }
+html { background-color: #eee8ae; }
 header.slide { background-color: #6c71c4; color: #fff; }
 body section header.slide h1 { font-size: 300%; }
 body section.slide h1 { font-size: 1.0in; }
@@ -7,4 +7,4 @@ body section.slide h2 { font-size: 0.8in; }
 .two_cols pre { float: left; width: 43%; margin-right: 4%; }
 .two_cols img { float: left; margin-right: 5%; }
 
-a { color: #268bd2; }
+a { color: #268bd2; text-shadow: .05em .05em .1em rgba(0,0,0,.2); }
